--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-27 09:22 -->
+<!-- 2022-11-28 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,48 +46,48 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org470e85c">1. 妙妙文章</a>
+<li><a href="#org33f221c">1. 妙妙文章</a>
 <ul>
-<li><a href="#org805378b">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orgeb67929">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org6ec7d61">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org9db1250">1.4. 关于编辑器</a></li>
-<li><a href="#org734c330">1.5. 关于代码</a>
+<li><a href="#org718e565">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#orgbf7043e">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org5a84785">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#orgc56745c">1.4. 关于编辑器</a></li>
+<li><a href="#org03c6837">1.5. 关于代码</a>
 <ul>
-<li><a href="#org8dc35f9">1.5.1. Lisp</a></li>
+<li><a href="#org86b29d0">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org7082281">1.6. 关于CPU</a></li>
-<li><a href="#org09cb44c">1.7. 关于算法</a>
+<li><a href="#org5e42068">1.6. 关于CPU</a></li>
+<li><a href="#org9d60129">1.7. 关于算法</a>
 <ul>
-<li><a href="#org1d40465">1.7.1. 关于随机</a></li>
+<li><a href="#org21aade3">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#org9e8d0cf">1.8. 关于AI</a></li>
-<li><a href="#org650d3c6">1.9. 关于软件</a>
+<li><a href="#org3cdfbae">1.8. 关于AI</a></li>
+<li><a href="#org0c0cd6f">1.9. 关于软件</a>
 <ul>
-<li><a href="#org80ef1c7">1.9.1. SQLite</a></li>
+<li><a href="#orgd82fb3b">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgf9ceb1f">1.10. 关于workflow</a></li>
+<li><a href="#orgc6c88ab">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org8caa586">2. 棒棒视频</a>
+<li><a href="#orgbb5ea0a">2. 棒棒视频</a>
 <ul>
-<li><a href="#org683b32d">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org4175fd1">2.2. 迷因水母</a></li>
-<li><a href="#org97e0a6d">2.3. 各种剧</a></li>
-<li><a href="#orgd05bc10">2.4. 电影</a></li>
+<li><a href="#orgfa38e4c">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orga3d7c31">2.2. 迷因水母</a></li>
+<li><a href="#org7116311">2.3. 各种剧</a></li>
+<li><a href="#org7916854">2.4. 电影</a></li>
 </ul>
 </li>
-<li><a href="#org0b1d082">3. 快乐游戏</a></li>
-<li><a href="#org781670b">4. 宝藏博主</a></li>
-<li><a href="#orgdceb20e">5. 有意思的</a>
+<li><a href="#orgc0da7ed">3. 快乐游戏</a></li>
+<li><a href="#orgef45bfa">4. 宝藏博主</a></li>
+<li><a href="#org0ee15b5">5. 有意思的</a>
 <ul>
-<li><a href="#orga50ce4d">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#org05fba72">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orge43e57b">6. 我想玩的</a></li>
+<li><a href="#org459d9e3">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -96,8 +96,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org470e85c" class="outline-2">
-<h2 id="org470e85c"><span class="section-number-2">1.</span> <a href="#org470e85c">妙妙文章</a></h2>
+<div id="outline-container-org33f221c" class="outline-2">
+<h2 id="org33f221c"><span class="section-number-2">1.</span> <a href="#org33f221c">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -434,7 +434,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="orga664941">
+<figure id="org6e34f28">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -498,8 +498,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org805378b" class="outline-3">
-<h3 id="org805378b"><span class="section-number-3">1.1.</span> <a href="#org805378b">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org718e565" class="outline-3">
+<h3 id="org718e565"><span class="section-number-3">1.1.</span> <a href="#org718e565">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -540,8 +540,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orgeb67929" class="outline-3">
-<h3 id="orgeb67929"><span class="section-number-3">1.2.</span> <a href="#orgeb67929">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgbf7043e" class="outline-3">
+<h3 id="orgbf7043e"><span class="section-number-3">1.2.</span> <a href="#orgbf7043e">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -571,8 +571,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org6ec7d61" class="outline-3">
-<h3 id="org6ec7d61"><span class="section-number-3">1.3.</span> <a href="#org6ec7d61">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org5a84785" class="outline-3">
+<h3 id="org5a84785"><span class="section-number-3">1.3.</span> <a href="#org5a84785">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -606,8 +606,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org9db1250" class="outline-3">
-<h3 id="org9db1250"><span class="section-number-3">1.4.</span> <a href="#org9db1250">关于编辑器</a></h3>
+<div id="outline-container-orgc56745c" class="outline-3">
+<h3 id="orgc56745c"><span class="section-number-3">1.4.</span> <a href="#orgc56745c">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -623,8 +623,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org734c330" class="outline-3">
-<h3 id="org734c330"><span class="section-number-3">1.5.</span> <a href="#org734c330">关于代码</a></h3>
+<div id="outline-container-org03c6837" class="outline-3">
+<h3 id="org03c6837"><span class="section-number-3">1.5.</span> <a href="#org03c6837">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -649,8 +649,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org8dc35f9" class="outline-4">
-<h4 id="org8dc35f9"><span class="section-number-4">1.5.1.</span> <a href="#org8dc35f9">Lisp</a></h4>
+<div id="outline-container-org86b29d0" class="outline-4">
+<h4 id="org86b29d0"><span class="section-number-4">1.5.1.</span> <a href="#org86b29d0">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -673,8 +673,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org7082281" class="outline-3">
-<h3 id="org7082281"><span class="section-number-3">1.6.</span> <a href="#org7082281">关于CPU</a></h3>
+<div id="outline-container-org5e42068" class="outline-3">
+<h3 id="org5e42068"><span class="section-number-3">1.6.</span> <a href="#org5e42068">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -689,8 +689,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org09cb44c" class="outline-3">
-<h3 id="org09cb44c"><span class="section-number-3">1.7.</span> <a href="#org09cb44c">关于算法</a></h3>
+<div id="outline-container-org9d60129" class="outline-3">
+<h3 id="org9d60129"><span class="section-number-3">1.7.</span> <a href="#org9d60129">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -709,8 +709,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-org1d40465" class="outline-4">
-<h4 id="org1d40465"><span class="section-number-4">1.7.1.</span> <a href="#org1d40465">关于随机</a></h4>
+<div id="outline-container-org21aade3" class="outline-4">
+<h4 id="org21aade3"><span class="section-number-4">1.7.1.</span> <a href="#org21aade3">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -724,8 +724,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org9e8d0cf" class="outline-3">
-<h3 id="org9e8d0cf"><span class="section-number-3">1.8.</span> <a href="#org9e8d0cf">关于AI</a></h3>
+<div id="outline-container-org3cdfbae" class="outline-3">
+<h3 id="org3cdfbae"><span class="section-number-3">1.8.</span> <a href="#org3cdfbae">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -735,8 +735,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org650d3c6" class="outline-3">
-<h3 id="org650d3c6"><span class="section-number-3">1.9.</span> <a href="#org650d3c6">关于软件</a></h3>
+<div id="outline-container-org0c0cd6f" class="outline-3">
+<h3 id="org0c0cd6f"><span class="section-number-3">1.9.</span> <a href="#org0c0cd6f">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -747,8 +747,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org80ef1c7" class="outline-4">
-<h4 id="org80ef1c7"><span class="section-number-4">1.9.1.</span> <a href="#org80ef1c7">SQLite</a></h4>
+<div id="outline-container-orgd82fb3b" class="outline-4">
+<h4 id="orgd82fb3b"><span class="section-number-4">1.9.1.</span> <a href="#orgd82fb3b">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -762,8 +762,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgf9ceb1f" class="outline-3">
-<h3 id="orgf9ceb1f"><span class="section-number-3">1.10.</span> <a href="#orgf9ceb1f">关于workflow</a></h3>
+<div id="outline-container-orgc6c88ab" class="outline-3">
+<h3 id="orgc6c88ab"><span class="section-number-3">1.10.</span> <a href="#orgc6c88ab">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -773,8 +773,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org8caa586" class="outline-2">
-<h2 id="org8caa586"><span class="section-number-2">2.</span> <a href="#org8caa586">棒棒视频</a></h2>
+<div id="outline-container-orgbb5ea0a" class="outline-2">
+<h2 id="orgbb5ea0a"><span class="section-number-2">2.</span> <a href="#orgbb5ea0a">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -833,8 +833,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org683b32d" class="outline-3">
-<h3 id="org683b32d"><span class="section-number-3">2.1.</span> <a href="#org683b32d">Veritasium 真理元素</a></h3>
+<div id="outline-container-orgfa38e4c" class="outline-3">
+<h3 id="orgfa38e4c"><span class="section-number-3">2.1.</span> <a href="#orgfa38e4c">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -865,8 +865,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org4175fd1" class="outline-3">
-<h3 id="org4175fd1"><span class="section-number-3">2.2.</span> <a href="#org4175fd1">迷因水母</a></h3>
+<div id="outline-container-orga3d7c31" class="outline-3">
+<h3 id="orga3d7c31"><span class="section-number-3">2.2.</span> <a href="#orga3d7c31">迷因水母</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li><p>
@@ -881,8 +881,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org97e0a6d" class="outline-3">
-<h3 id="org97e0a6d"><span class="section-number-3">2.3.</span> <a href="#org97e0a6d">各种剧</a></h3>
+<div id="outline-container-org7116311" class="outline-3">
+<h3 id="org7116311"><span class="section-number-3">2.3.</span> <a href="#org7116311">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -906,8 +906,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd05bc10" class="outline-3">
-<h3 id="orgd05bc10"><span class="section-number-3">2.4.</span> <a href="#orgd05bc10">电影</a></h3>
+<div id="outline-container-org7916854" class="outline-3">
+<h3 id="org7916854"><span class="section-number-3">2.4.</span> <a href="#org7916854">电影</a></h3>
 <div class="outline-text-3" id="text-2-4">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -933,7 +933,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://movie.douban.com/subject/19899707/">驯龙高手3</a> (再见~)
 </p>
 
-<figure id="orgaf7e838">
+<figure id="org0faf5af">
 <img src="./index/dragon3.jpg" alt="dragon3.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -951,8 +951,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0b1d082" class="outline-2">
-<h2 id="org0b1d082"><span class="section-number-2">3.</span> <a href="#org0b1d082">快乐游戏</a></h2>
+<div id="outline-container-orgc0da7ed" class="outline-2">
+<h2 id="orgc0da7ed"><span class="section-number-2">3.</span> <a href="#orgc0da7ed">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -982,8 +982,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org781670b" class="outline-2">
-<h2 id="org781670b"><span class="section-number-2">4.</span> <a href="#org781670b">宝藏博主</a></h2>
+<div id="outline-container-orgef45bfa" class="outline-2">
+<h2 id="orgef45bfa"><span class="section-number-2">4.</span> <a href="#orgef45bfa">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -994,7 +994,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgeec5229">
+<figure id="orga139d04">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -1002,8 +1002,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgdceb20e" class="outline-2">
-<h2 id="orgdceb20e"><span class="section-number-2">5.</span> <a href="#orgdceb20e">有意思的</a></h2>
+<div id="outline-container-org0ee15b5" class="outline-2">
+<h2 id="org0ee15b5"><span class="section-number-2">5.</span> <a href="#org0ee15b5">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -1029,8 +1029,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orga50ce4d" class="outline-3">
-<h3 id="orga50ce4d"><span class="section-number-3">5.1.</span> <a href="#orga50ce4d">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-org05fba72" class="outline-3">
+<h3 id="org05fba72"><span class="section-number-3">5.1.</span> <a href="#org05fba72">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1042,8 +1042,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orge43e57b" class="outline-2">
-<h2 id="orge43e57b"><span class="section-number-2">6.</span> <a href="#orge43e57b">我想玩的</a></h2>
+<div id="outline-container-org459d9e3" class="outline-2">
+<h2 id="org459d9e3"><span class="section-number-2">6.</span> <a href="#org459d9e3">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1066,7 +1066,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-27 09:21</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-27 09:22</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-28 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
