--- a/content/collections/tools.html
+++ b/content/collections/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-11-27 09:22 -->
+<!-- 2022-11-28 02:44 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>有用的工具</title>
@@ -45,15 +45,15 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgfbe0dd0">1. 推送</a></li>
-<li><a href="#orgbd78b39">2. Git</a></li>
+<li><a href="#orgc6430bf">1. 推送</a></li>
+<li><a href="#orge2c0e30">2. Git</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orgfbe0dd0" class="outline-2">
-<h2 id="orgfbe0dd0"><span class="section-number-2">1.</span> <a href="#orgfbe0dd0">推送</a></h2>
+<div id="outline-container-orgc6430bf" class="outline-2">
+<h2 id="orgc6430bf"><span class="section-number-2">1.</span> <a href="#orgc6430bf">推送</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://ntfy.sh/">ntfy.sh</a> 一行 curl 即可使用的推送服务.
@@ -63,8 +63,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgbd78b39" class="outline-2">
-<h2 id="orgbd78b39"><span class="section-number-2">2.</span> <a href="#orgbd78b39">Git</a></h2>
+<div id="outline-container-orge2c0e30" class="outline-2">
+<h2 id="orge2c0e30"><span class="section-number-2">2.</span> <a href="#orge2c0e30">Git</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><a href="https://gource.io/">Gource - a software version control visualization tool</a>
@@ -83,7 +83,7 @@
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-11-27 09:19</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-27 09:22</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-11-28 02:44</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/tools.org">content/collections/tools.org</a></td></tr>
 </table>
